// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`loadingFragment renders correctly 1`] = `
<div
  className="row"
>
  <div
    className="text-center m-4 col"
  >
    <div
      className="spinner-border"
      role="status"
    >
      <span
        className="sr-only"
      >
        Loading...
      </span>
    </div>
  </div>
</div>
`;

exports[`titleFragment renders correctly edge case 1`] = `
<div
  className="row"
>
  <h1
    className="col"
  >
    
  </h1>
</div>
`;

exports[`titleFragment renders correctly regular case 1`] = `
<div
  className="row"
>
  <h1
    className="col"
  >
    someTitle
  </h1>
</div>
`;
